feat: use tailwindcss for styling
Via CDN because this is just an example project.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{page-title "ArrowsBetweenComponents"}}
+{{page-title 'ArrowsBetweenComponents'}}
 
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class='bg-gray-200 h-screen flex flex-col justify-center items-center'>
+  {{outlet}}
+</div>
