--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,15 @@
-<div class='absolute inset-0 flex justify-center items-center'>
+<div
+  class='absolute inset-0 flex justify-center items-center'
+  {{on-resize this.handleResize}}
+>
+  {{#if (and this.width this.height)}}
+    <svg
+      width={{this.width}}
+      height={{this.height}}
+      class='absolute inset-0 z-10'
+    >
+    </svg>
+  {{/if}}
   <div class='bg-white h-96 w-96 shadow-sm p-8 flex space-x-24'>
     <div class='flex space-x-24'>
       <div class='flex flex-col'>
