feat: draw paths between components
We use the paths calculated in the arrow service to draw paths
between dom elements on our SVG-"canvas". We need to make sure to
recalculate the paths when the container of the svg element changes
in size otherwise the paths will get out of sync with the positions
of bounding-boxes on the screen.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,12 +3,18 @@
   {{on-resize this.handleResize}}
 >
   {{#if (and this.width this.height)}}
-    <svg
-      width={{this.width}}
-      height={{this.height}}
-      class='absolute inset-0 z-10'
-    >
-    </svg>
+    <Providers::Arrows as |arrows|>
+      <svg
+        width={{this.width}}
+        height={{this.height}}
+        class='absolute inset-0 z-10'
+        {{did-update arrows.fns.recalcCurves this.width}}
+      >
+        {{#each arrows.data.curves as |d|}}
+          <path d={{d}} stroke='black' strokeWidth='3' fill='none'></path>
+        {{/each}}
+      </svg>
+    </Providers::Arrows>
   {{/if}}
   <div class='bg-white h-96 w-96 shadow-sm p-8 flex space-x-24'>
     <div class='flex space-x-24'>
