feat: demonstrate how to add click handlers to Evals
We need to make sure to add `pointer-events-none` so that clicks
on the svg don't trigger clicks and we can interact with the underlying
eval elements.

--- a/app/components/eval.hbs
+++ b/app/components/eval.hbs
@@ -4,6 +4,7 @@
     data-eval='{{@eval.id}}'
     {{did-insert (fn arrows.fns.registerEval @eval)}}
     {{will-destroy (fn arrows.fns.unregisterEval @eval)}}
+    ...attributes
   >
     {{@eval.id}}
   </div>
