--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,7 +7,7 @@
       <svg
         width={{this.width}}
         height={{this.height}}
-        class='absolute inset-0 z-10'
+        class='absolute inset-0 z-10 pointer-events-none'
         {{did-update arrows.fns.recalcCurves this.width}}
       >
         {{#each arrows.data.curves as |d|}}
@@ -19,7 +19,7 @@
   <div class='bg-white h-96 w-96 shadow-sm p-8 flex space-x-24'>
     <div class='flex space-x-24'>
       <div class='flex flex-col'>
-        <Eval @eval={{this.hierarchy}} />
+        <Eval @eval={{this.hierarchy}} {{on "click" this.alertClick}}/>
       </div>
 
       {{#each this.descendentsMap as |evals|}}
